# snow-tracker

./: .dockerignore  .dusk-warden.toml  .gitignore  .stack-sync.toml  .vault-sync.toml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  deno.json  docker-compose.yml  import_map.json  import_map_dev.json  import_map_test.json  index.html  justfile  package-lock.json  package.json  plan.md  remix.config.js  run.ts  server.ts  snow.db  tsconfig.json  tsconfig.prod.json
client/: .eslintrc.js  .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  remix.env.d.ts  wrangler.toml
client/app/: bindings.d.ts  config.ts  root.tsx
client/app/components/: Link.js  index.js
client/app/routes/: index.tsx
client/app/snow/: SnowSummary.js  Snowfall.js  snow.css  store.ts
client/app/types/: context.ts
client/app/util/: format.js  loader.ts  useRefresh.ts
client/css/: reset.css  snow.css
client/functions/: [[path]].js
client/public/: index.html  manifest.json
client/src/: App.js  App.test.js  api.rs  config.js  index.css  index.js  main.rs  serviceWorker.js
client/src/components/: Link.js  condition.rs  forecasts.rs  index.js  lifts.rs  mod.rs  snow_summary.rs  snowfall.rs
server/: .eslintrc.yml  Cargo.toml  package-lock.json  package.json
server/infrastructure/: dns.tf  main.tf
server/src/: api.js  config.js  config.rs  context.js  db.rs  error.rs  main.rs  refresh.rs  routes.rs  schema.js  weather.rs
server/tools/: localServer.js  parseTest.js  skiBowlParseTest.js  timberlineParseTest.js  weatherTest.js
(+198 files in other folders)
